yaml/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  # set your lab user name
  name: user27-hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      # set your lab user name
      app: user27-hello-world
  template:
    metadata:
      labels:
        # set your lab user name
        app: user27-hello-world
    spec:
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: hello-world
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          # update with the image you build in part 1
          image: "quay.io/alexander410dev/quay.io/alexander410dev/alex_images:v1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
