yaml/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  # set your user name
  name: user27-hello-world
spec:
  to:
    kind: Service
    # set your user name
    name: user27-hello-world
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
